test/tests/compiler/4_logical_and_relational_operators/valid/nested_ops.plx
pub fn main(none) i32 {
    return not -3
}
